# QMLPlot

./: CMakeLists.txt  Figure.qml  LICENSE  Main.qml  README.md  datasource.cpp  datasource.h  main.cpp  qml.qrc
